syntax = "proto3";
package msim.rpc;

// ---------------------------------------------------------------------------
// Event Types
// ---------------------------------------------------------------------------
enum EventType {
  EVENT_UNKNOWN = 0;
  ORDER_ADD     = 1;
  ORDER_CANCEL  = 2;
  TRADE         = 3;
}

enum Side {
  SIDE_UNKNOWN = 0;
  BUY          = 1;
  SELL         = 2;
}

// ---------------------------------------------------------------------------
// Core Event message
// ---------------------------------------------------------------------------
message Event {
  uint64 ts_ns   = 1;
  EventType type = 2;
  string symbol  = 3;
  double price   = 4;
  int32 qty      = 5;
  Side side      = 6;
}

// ---------------------------------------------------------------------------
// Batch: multiple events in one gRPC write
// ---------------------------------------------------------------------------
message EventBatch {
  repeated Event events = 1;
}

// ---------------------------------------------------------------------------
// Acknowledgment
// ---------------------------------------------------------------------------
message Ack {
  uint64 count = 1;
}

// ---------------------------------------------------------------------------
// Upstream-firehose RPC
// ---------------------------------------------------------------------------
service MarketStream {
  rpc Publish(stream EventBatch) returns (Ack);
}
